@@ -19,3 +19,9 @@ foo <- mxMatrix(name = 'foo', nrow = 1, ncol = 1, free = TRUE, labels = 'foo')
 bar <- mxAlgebra(foo, name = 'bar')
 model <- mxModel('model', foo, bar)
 omxCheckError(mxRun(model), "In model 'model' the following are both named entities and free parameters: 'foo'")
+foo <- mxMatrix(name = 'foo', nrow = 1, ncol = 1, free = TRUE, labels = 'a')
+bar <- mxMatrix(name = 'bar', nrow = 1, ncol = 1, free = TRUE, labels = 'a')
+baz <- mxMatrix(name = 'baz', nrow = 1, ncol = 1, free = FALSE, labels = 'a')
+quux <- mxMatrix(name = 'quux', nrow = 1, ncol = 1, free = FALSE, labels = 'a')
+model <- mxModel('model', foo, bar, baz, quux)
+omxCheckError(mxRun(model), "In model 'model' the name 'a' is used as a free parameter in 'model.foo' and 'model.bar' and as a fixed parameter in 'model.baz' and 'model.quux'")
